soctrack/app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 .staticChatPane{
   position: fixed;
   top: 40px;
   right: 20px;
 }
 .popover{
     max-width: 100%; /* Max Width of the popover (depending on the container!) */
 }
 ul.navbar-right{
  margin-right: 0 !important
 }
 .user-profile img {
 	width:40px;
 	height:40px;
 	border-radius:50%;
 	margin-top: 5px;
 }

 .user-profile {
 	color: black;
 }

 hr {
 	height: 5px;
 	background-color: #333;
 }

 #flightsTable{
    width: 100% !important;
 }
 
 td.details-control {
    cursor: pointer;
 }

 td.favorites-control {
    cursor: pointer;
 }

 .favorite {
    color: yellow;
 }

 .glyphicon-plus {
    color: green;
 }
  .glyphicon-minus {
    color: red;
  }

  .glyphicon-thumbs-up {
    margin-top: 35px;
    font-size: 1.25em;
  }

  .glyphicon-thumbs-down {
    margin-top: 35px;
    font-size: 1.25em;
  }

  .glyphicon-globe {
    margin-left: 1px;
    margin-top: 30px;
    font-size: 1.60em;
  }

  .glyphicon-plane {
    margin-top: 30px;
    font-size: 1.6em;
  }

  .glyphicon-info-sign {
    font-size: .85em;
    color: #2196F3;
  }

 #actionsDropdown {
 	margin-left: -15px;
 }

.dropdown-menu {
  cursor: pointer;
 }

 .user-profile img {
 	width:40px;
 	height:40px;
 	border-radius:50%;
 	margin-top: 5px;
 }

 .user-profile {
 	color: black;
 }

 .inlineTable {
   display: inline-block;
 }

 .toolbar {
    float:right;
  }

 span[class*="glyphicon"] {
   margin-top: -.4em;
   margin-bottom: 0em;
 }

 .glyphicon-red-dot:before {
   content: "\25cf";
   font-size: 2em;
   color: red;
 }

 .glyphicon-green-dot:before {
   content: "\25cf";
   font-size: 2em;
   color: green;
 }

 .glyphicon-yellow-dot:before {
   content: "\25cf";
   font-size: 2em;
   color: yellow;
 }

 .glyphicon-blue-dot:before {
   content: "\25cf";
   font-size: 2em;
   color: blue;
 }

 .glyphicon-full-dot:before {
   content: "\25cf";
   font-size: 2em;
 }

 .glyphicon-empty-dot:before {
   content: "\25cb";
   font-size: 2em;
 }

 .glyphicon-remove {
 	color: red;
 }

a.controlBtn {
  cursor: pointer;
  margin-left: 5px;
}

a.controlBtn:hover {
    background-color: transparent;
}

 /*bootstrap navbar padding */
body {
  padding-top: 70px;
  margin: 0px;
}

#firechat-wrapper {
  margin-top: 25px; 
}

.futureFlight {
  color: green;
}

.pastFlight {
  color: red;
}

body.modal-open div.modal-backdrop {
  position: relative;
  /*do something with z-index maybe?*/
}

